fix: swap bg colors for better page contrast

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -229,7 +229,6 @@ section.bg-color {
 
 
 footer {
-  margin-top: var(--margin-base);
   background: var(--clr-text);
   padding: var(--padding-base);
   color: var(--clr-white);
